--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ flask==3.0.0
 flask-cors==4.0.0
 google-search-results==2.4.2  # SerpAPI client
 gunicorn==21.2.0
-lxml==4.9.3
+lxml>=5.0.0
 neo4j==5.15.0
 openai>=1.0.0
 phonenumbers==8.13.27
