--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ dnspython==2.4.2
 flask==3.0.0
 flask-cors==4.0.0
 google-search-results==2.4.2  # SerpAPI client
+greenlet>=3.1.0  # Required for Python 3.13 compatibility
 gunicorn==21.2.0
 lxml>=5.0.0
 neo4j==5.15.0
