--- a/requirements.txt
+++ b/requirements.txt
@@ -6,13 +6,14 @@ dnspython==2.4.2
 flask==3.0.0
 flask-cors==4.0.0
 google-search-results==2.4.2  # SerpAPI client
-greenlet>=3.1.0  # Required for Python 3.13 compatibility
 gunicorn==21.2.0
 lxml>=5.0.0
 neo4j==5.15.0
 openai>=1.0.0
 phonenumbers==8.13.27
-playwright==1.40.0
+# Playwright is optional - code gracefully handles if not available
+# Uncomment if you need headless browser scraping:
+# playwright>=1.48.0  # Newer version supports greenlet>=3.1.0
 psycopg2-binary==2.9.9
 pytest==7.4.3
 pytest-cov==4.1.0
