Add pre-enriched ShadowStack data and auto-import
- Export 110 ShadowStack domains with 83 enrichment records to JSON
- Auto-imports pre-enriched data on Render startup (much faster)
- Falls back to on-the-fly enrichment if JSON file not found
- User runs seed_and_enrich_shadowstack_local.py locally, commits JSON
- Render automatically imports enriched data on startup - no manual steps needed

--- a/.gitignore
+++ b/.gitignore
@@ -63,7 +63,8 @@ htmlcov/
 # Data directories
 data/
 *.csv
-*.json
+# Allow shadowstack_enriched_data.json (needed for Render auto-import)
+!shadowstack_enriched_data.json
 
 # Temporary files
 tmp/
