Fix: Ensure SurveyData.csv is available on Render and improve safety
- Add SurveyData.csv exception to .gitignore (like shadowstack_enriched_data.json)
- Add SurveyData.csv to repository for Render deployment
- Improve file path resolution for both local and Render environments
- Add better error handling with clear messages
- Verify endpoint is completely read-only (no database writes, no file modifications)
- Endpoint only reads CSV and returns JSON statistics

--- a/.gitignore
+++ b/.gitignore
@@ -63,6 +63,8 @@ htmlcov/
 # Data directories
 data/
 *.csv
+# Allow specific CSV files needed for reports
+!SurveyData.csv
 # Allow shadowstack_enriched_data.json (needed for Render auto-import)
 !shadowstack_enriched_data.json
 
