Add Resend email integration for contact form
- Updated contact form to use Resend API instead of mailto links
- Added Resend API key configuration to render.yaml
- Added Google Tag Manager (GTM) to all HTML templates
- Fixed Dark AI logo consistency across all pages
- Added smooth scroll to tools section on homepage
- Redesigned PersonaForge data notice modal as top banner
- Created .env.example and RENDER_EMAIL_SETUP.md for deployment

--- a/render.yaml
+++ b/render.yaml
@@ -69,6 +69,14 @@ services:
         sync: false
       - key: ETHERSCAN_API_KEY
         sync: false
+      
+      # Email Configuration (Contact Form)
+      - key: RESEND_API_KEY
+        sync: false
+      - key: FROM_EMAIL
+        value: onboarding@resend.dev
+      - key: CONTACT_EMAIL
+        value: aazirmun@gmail.com
 
 databases:
   # Using existing blackwire database (shared by all services)
