Add enrichment caching and Swagger/OpenAPI documentation
- Implemented in-memory caching for enrichment results (24h TTL)
- Added cache stats and clear endpoints
- Created Swagger/OpenAPI 3.0 documentation for all endpoints
- Cache reduces enrichment time from 30-60s to <1s for cached domains
- API docs available at /shadowstack/api-docs
- All API keys and sensitive data excluded from documentation

--- a/requirements.txt
+++ b/requirements.txt
@@ -24,3 +24,4 @@ python-whois==0.8.0
 requests==2.31.0
 selenium==4.15.2
 setuptools>=80.0.0  # Required for python-wappalyzer
+flask-swagger-ui==4.11.1  # Swagger/OpenAPI documentation
