Fix report UI issues and prepare for production deployment
- Fix navigation menu on vendor intelligence report (full menu with dropdown)
- Fix tooltip data display (handle horizontal/vertical bar charts correctly)
- Normalize category names (remove duplicates, proper formatting)
- Normalize service names (remove duplicates, proper formatting)
- Fix incomplete sentences in report (sophistication and security findings)
- Fix contact link (point to /about#contact)
- Fix duplicate keywords in charts (combine counts)
- Increase timeouts for enrichment (25s default, 30s for slow ops)
- Fix date serialization in database (handle datetime objects)
- Add SKIP_NEO4J to render.yaml for production
- Add production deployment checklist and verification script
- Update chart title: 'Vendors by Region' → 'Vendors by Target Region'

--- a/render.yaml
+++ b/render.yaml
@@ -11,6 +11,9 @@ services:
         generateValue: true
       - key: FLASK_ENV
         value: production
+      - key: SKIP_NEO4J
+        value: "1"
+        comment: "Skip Neo4j connection (optional - set to 0 if Neo4j is available)"
       
       # Shared Database - All services use the same database
       # Using the existing blackwire database
