--- a/personaforge/requirements.txt
+++ b/personaforge/requirements.txt
@@ -3,6 +3,7 @@ python-whois==0.8.0
 dnspython==2.4.2
 requests==2.31.0
 beautifulsoup4==4.12.2
+lxml>=5.0.0  # For BeautifulSoup HTML parsing
 lxml==4.9.3
 playwright==1.40.0
 selenium==4.15.2
