Add static report data: serve JSON file for fastest performance
- Extract data generation into _generate_vendor_intelligence_data() function
- API endpoint now serves static JSON file first (fastest)
- Falls back to dynamic generation if static file missing
- Added generate_report_data.py script to regenerate static file
- Updated .gitignore to allow static report data file

--- a/.gitignore
+++ b/.gitignore
@@ -67,6 +67,10 @@ data/
 !SurveyData.csv
 # Allow shadowstack_enriched_data.json (needed for Render auto-import)
 !shadowstack_enriched_data.json
+# Allow vendor intelligence report static data
+!personaforge/static/data/
+personaforge/static/data/*
+!personaforge/static/data/vendor_intelligence_report.json
 
 # Temporary files
 tmp/
