Update ShadowStack to show all 200 domains and UI improvements
- Update all database queries to use ILIKE for case-insensitive matching (200 domains)
- Refactor get_graph_from_postgres() and get_analytics() to use PostgresClient
- Fix database connection logic to handle both DATABASE_URL (Render) and POSTGRES_* vars (local)
- Update ShadowStack dashboard UI with modern styling
- Add DNS History tab with country grouping and filtering
- Remove empty columns (Subdomains, Historical IPs, Enhanced Registrar) from table
- Hide 'Show All Columns' button when no additional columns available
- Update PersonaForge report with Security Headers explanation
- Fix navigation consistency across all pages

--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,6 @@ personaforge/static/data/*
 tmp/
 temp/
 *.tmp
+
+# ShadowStack IP history data (local, not committed)
+shadowstack_ip_history.json
