Remove column selection dropdown, add static analysis file, fix mobile orientation, update DNS history endpoint

--- a/.gitignore
+++ b/.gitignore
@@ -71,6 +71,10 @@ data/
 !personaforge/static/data/
 personaforge/static/data/*
 !personaforge/static/data/vendor_intelligence_report.json
+# Allow ShadowStack analysis static data
+!shadowstack/static/data/
+shadowstack/static/data/*
+!shadowstack/static/data/analysis.html
 
 # Temporary files
 tmp/
