--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 # Combined requirements for DarkAI consolidated platform
 # Includes dependencies from PersonaForge, BlackWire, and ShadowStack
 
-beautifulsoup4==4.12.2
+beautifulsoup4==4.12.2  # Used by dfacesearch for web scraping
 dnspython==2.4.2
 flask==3.0.0
 flask-cors==4.0.0
@@ -25,3 +25,6 @@ requests==2.31.0
 selenium==4.15.2
 setuptools>=80.0.0  # Required for python-wappalyzer
 flask-swagger-ui==4.11.1  # Swagger/OpenAPI documentation
+deepface>=0.0.79  # Face recognition library (free, local)
+opencv-python>=4.8.0  # Required for deepface
+tensorflow>=2.13.0  # Required for deepface (or use tensorflow-cpu for lighter install)
