--- a/ledger/package.json
+++ b/ledger/package.json
@@ -17,6 +17,9 @@
   "dependencies": {
     "@react-spring/web": "^10.0.3",
     "@types/d3": "^7.4.3",
+    "@types/node": "^20.10.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "autoprefixer": "^10.4.16",
     "d3": "^7.8.5",
     "framer-motion": "^10.16.4",
@@ -27,14 +30,11 @@
     "react-spring": "^10.0.3",
     "resend": "^6.7.0",
     "tailwindcss": "^3.3.6",
+    "typescript": "^5.3.0",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
-    "@types/node": "^20.10.0",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
     "eslint": "^8.54.0",
-    "eslint-config-next": "^14.0.0",
-    "typescript": "^5.3.0"
+    "eslint-config-next": "^14.0.0"
   }
 }
