--- a/ledger/package.json
+++ b/ledger/package.json
@@ -2,6 +2,10 @@
   "name": "the-ledger",
   "version": "1.0.0",
   "private": true,
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
+  },
   "scripts": {
     "dev": "next dev",
     "dev:clean": "rm -rf .next && next dev",
