--- a/ledger/.renderignore
+++ b/ledger/.renderignore
@@ -1,7 +1,7 @@
 # Ignore files for Render deployment
 node_modules/
 .next/
-# Note: out/ is NOT ignored - it's needed for deployment
+out/
 .git/
 *.md
 !README.md
