--- a/ledger/render.yaml
+++ b/ledger/render.yaml
@@ -4,7 +4,7 @@ services:
   - type: web
     name: the-ledger
     env: static
-    buildCommand: npm install && BASE_PATH=/ledger STATIC_EXPORT=true npm run build
+    buildCommand: npm ci && BASE_PATH=/ledger STATIC_EXPORT=true NODE_ENV=production npm run build
     staticPublishPath: ./out
     routes:
       - type: rewrite
