Update .gitignore to allow healthcare_costs.json - required data file

--- a/.gitignore
+++ b/.gitignore
@@ -63,6 +63,8 @@ htmlcov/
 # Data directories
 # Allow Ledger processed data FIRST (needed for build)
 !ledger/public/data/processed/
+# Allow Ledger public data files (needed for /ledger/thetradeoff page)
+!ledger/public/data/healthcare_costs.json
 data/
 *.csv
 # Allow specific CSV files needed for reports
