Optimize: Keep .next cache to prevent build timeouts
- Changed build command to only clear 'out/' directory
- Keep .next/ cache for faster incremental builds
- This reduces build time and prevents timeout issues
- Added timeout diagnostic commands in CHECK_TIMEOUT_COMMANDS.md

Fixes potential timeout issue where builds take too long

--- a/render.yaml
+++ b/render.yaml
@@ -71,8 +71,9 @@ services:
         cat postcss.config.js | head -5
         
         echo ""
-        echo "🧹 Clearing build cache..."
-        rm -rf .next out
+        echo "🧹 Clearing build output (keeping .next cache for faster builds)..."
+        rm -rf out
+        # Keep .next cache to speed up builds - only clear if build fails
         
         echo ""
         echo "📦 Running npm install..."
