--- a/render.yaml
+++ b/render.yaml
@@ -71,9 +71,9 @@ services:
         cat postcss.config.js | head -5
         
         echo ""
-        echo "🧹 Clearing build output (keeping .next cache for faster builds)..."
-        rm -rf out
-        # Keep .next cache to speed up builds - only clear if build fails
+        echo "🧹 Clearing build cache (like working commit)..."
+        rm -rf .next out
+        # Clear everything like the working commit did
         
         echo ""
         echo "📦 Running npm install..."
