--- a/render.yaml
+++ b/render.yaml
@@ -77,9 +77,8 @@ services:
         
         echo ""
         echo "📦 Running npm install..."
-        # Explicitly install all dependencies (not just production)
-        # This ensures devDependencies are also available if needed
-        npm install --include=dev || { 
+        # Install all dependencies including devDependencies (needed for TypeScript)
+        npm install || { 
           echo "❌ npm install failed with exit code $?"
           exit 1
         }
