--- a/render.yaml
+++ b/render.yaml
@@ -78,7 +78,7 @@ services:
         echo ""
         echo "📦 Running npm install..."
         # Install all dependencies including devDependencies (needed for TypeScript)
-        npm install || { 
+        npm install --include=dev || { 
           echo "❌ npm install failed with exit code $?"
           exit 1
         }
