ProtectOnt Option A: sync FFord to ledger, serve at root for protectont.ca, redirect darkai.ca/ledger
- Sync FFord source into ledger/ (Protect Ontario rebrand, timeline, water/wildlife/greenbelt)
- Flask Option A: protectont.ca serves Ledger at root; darkai.ca/ledger -> 302 to protectont.ca
- Remove old /ledger route; add serve_ledger_at_root + before_request
- render.yaml: build ledger with npm run build:protectont (no base path) for root serving

--- a/ledger/package.json
+++ b/ledger/package.json
@@ -10,6 +10,7 @@
     "build": "next build",
     "build:validate": "next build && node scripts/validate-build.js",
     "build:static": "STATIC_EXPORT=true next build",
+    "build:protectont": "STATIC_EXPORT=true next build",
     "start": "next start",
     "lint": "next lint",
     "process-data": "python scripts/process_data.py"
