ProtectOnt deploy fix: include ledger/out in deploy; host detection; local test scripts
- ledger/.renderignore: remove out/ so built Ledger is included in Render deploy (fixes 503)
- app.py: X-Forwarded-Host + Forwarded for host detection; _ledger-status; 503 diagnostics
- render.yaml: NODE_OPTIONS for Ledger build; build message
- Add run-ledger-build.sh, test-protectont-local.sh, render-shell-check, RENDER_BUILD_TROUBLESHOOTING.md
- requirements-minimal.txt, run-local.sh for local ProtectOnt testing

--- a/render.yaml
+++ b/render.yaml
@@ -103,6 +103,8 @@ services:
         echo "  NODE_ENV=$NODE_ENV" >> "$DIAG_LOG"
         echo "Build: npm run build:protectont (static export, no base path)" >> "$DIAG_LOG"
         
+        # Give Next.js enough memory on Render (default can be too low)
+        export NODE_OPTIONS="${NODE_OPTIONS:-} --max-old-space-size=4096"
         
         # Run build with environment variables inline (more reliable) and capture all output
         if ! NODE_ENV=production npm run build:protectont >> "$DIAG_LOG" 2>&1; then
@@ -193,7 +195,8 @@ services:
           exit 1
         fi
         echo "✅ ledger/out/index.html exists and is accessible"
-        echo "✅ Build artifacts:"
+        echo "✅ Absolute path (app.py expects ledger/out under project root):"
+        echo "   $(pwd)/ledger/out"
         ls -la ledger/out/ | head -10
         echo ""
         echo "=========================================="
