--- a/ledger/.renderignore
+++ b/ledger/.renderignore
@@ -1,7 +1,7 @@
-# Ignore files for Render deployment
+# Ignore files for Render deployment (keep out/ - it's the built Ledger for protectont.ca)
 node_modules/
 .next/
-out/
+# out/ - DO NOT ignore: needed at runtime for ProtectOnt.ca
 .git/
 *.md
 !README.md
