ProtectOnt: copy Ledger build to static/protectont, serve from there; pre-deploy verify script
- app.py: _ledger_dir() tries static/protectont first, then ledger/out
- render.yaml: after Ledger build, cp ledger/out to static/protectont (avoids .gitignore excluding ledger/out on deploy)
- .gitignore: add static/protectont/ (build copy, do not commit)
- scripts/verify-protectont-before-deploy.sh + PROTECTONT_DEBUG_BEFORE_DEPLOY.md for pre-deploy checks

--- a/.gitignore
+++ b/.gitignore
@@ -80,6 +80,9 @@ personaforge/static/data/*
 shadowstack/static/data/*
 !shadowstack/static/data/analysis.html
 
+# ProtectOnt Ledger build copy (created by Render build; do not commit)
+static/protectont/
+
 # Temporary files
 tmp/
 temp/
